--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -10,4 +11,16 @@
         android:gravity="center"
         android:text="登陆"
         android:id="@+id/btn_login"/>
+
+    <com.epro.fastdevtem.widget.VerifyCode
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        app:codeLength="4"
+        app:isContainChar="false"
+        app:linNum="3"
+        app:pointNum="100"
+        app:codeTextSize="16sp"
+        app:codeBackground="#b98080"
+
+        />
 </LinearLayout>
